@@ -26,11 +26,15 @@ using System.Collections.Generic;
 using System.Drawing;
 using System.Drawing.Imaging;
 using System.Diagnostics;
+using System.IO;
 
 using Cumberland;
 using Cumberland.Data.Shapefile;
+using Cumberland.Data.PostGIS;
+
 using Cumberland.Drawing;
 using Cumberland.Projection;
+using Cumberland.Xml.Serialization;
 
 using NDesk.Options;
 
@@ -40,20 +44,18 @@ namespace Cumberland.DrawMap
 	{
 		public static void Main(string[] args)
 		{
-			Map map = new Map();
-			map.Width = 400;
-			map.Height = 400;
-			map.Projection = ProjFourWrapper.WGS84;
-			
 			IMapDrawer drawer = new MapDrawer();
 			
 			bool showHelp = false;
 			string path = "out.png";
+			int w = -1;
+			int h = -1;
+			Rectangle extents = new Rectangle();
 			
 			OptionSet options = new OptionSet();
 			options.Add("e|extents=", 
 			            "comma-delimited extents (e.g. -180,-90,180,90) ",
-			            delegate (string v) { map.Extents = ParseExtents(v); });
+			            delegate (string v) { extents = ParseExtents(v); });
 			options.Add("h|help",  "show this message and exit",
 			            delegate (string v) { showHelp = v!= null; });
 			options.Add("o|output=",
@@ -61,13 +63,10 @@ namespace Cumberland.DrawMap
 			            delegate (string v) { path = v; });
 			options.Add("w|width=",
 			            "the width of the image in pixels",
-			            delegate (string v) { map.Width = int.Parse(v); });
+			            delegate (string v) { w = int.Parse(v); });
 			options.Add("t|height=",
 			            "the height of the image in pixels",
-			            delegate (string v) { map.Height = int.Parse(v); });
-			options.Add("p|proj=",
-			            "the output projection. can be a quoted proj4 string or an epsg code",
-			            delegate (string v) { map.Projection = ParseProjection(v); });
+			            delegate (string v) { h = int.Parse(v); });
 		            
 		
 			List<string> rest = options.Parse(args);
@@ -78,32 +77,26 @@ namespace Cumberland.DrawMap
 				return;
 			}
 			
+			if (rest.Count == 0)
+			{
+				System.Console.WriteLine("No map specified");
+				ShowHelp(options);
+				return;
+			}
+			
 			Stopwatch sw = new Stopwatch();
 			
 			sw.Start();
 
-			Random r = new Random();
+			MapSerializer ms = new MapSerializer();
+			ms.AddDBFeatureProvider(typeof(PostGISFeatureSource));
 			
-			foreach (string arg in rest)
-			{
-				string[] layerArgs = arg.Split(',');
+			Map map = ms.Deserialize(rest[0]);
+			if (w > 0) map.Width = w;
+			if (h > 0) map.Height = h;
+			if (!extents.IsEmpty) map.Extents = extents;
 
-				Layer l = new Layer();
-				l.Data = new Shapefile(layerArgs[0]);
-				l.PointSize = r.Next(5)+1;
-				l.FillColor =  Color.FromArgb(r.Next(255), r.Next(255), r.Next(255));
-				l.LineColor = Color.FromArgb(r.Next(155), r.Next(155), r.Next(155));
-				l.LineWidth = 1; //r.Next(3)+1;
-				
-				if (layerArgs.Length > 1)
-				{
-					l.Projection = ParseProjection(layerArgs[1]);;
-				}
-				
-				//l.LineStyle = LineStyle.None;
-				
-				map.Layers.Add(l);
-			}
+			System.Console.WriteLine(map.Layers.Count + " Layer(s) loaded");
 			
 			System.Console.WriteLine("Load Time (ms): " + sw.Elapsed.TotalMilliseconds);
 			
@@ -123,10 +116,10 @@ namespace Cumberland.DrawMap
 		
 		static void ShowHelp (OptionSet p)
 	    {
-	        Console.WriteLine ("Usage: [mono] Cumberland.DrawMap.exe [OPTIONS]+ [\"path to shapefile\",epsg/\"proj4 string\"]+ ");
-	        Console.WriteLine ("Draws a map based on the given layers and options.");
+	        Console.WriteLine ("Usage: [mono] Cumberland.DrawMap.exe [OPTIONS]+ \"path to map file\" ");
+	        Console.WriteLine ("Draws a map");
 	        Console.WriteLine ();
-			Console.WriteLine ("example: mono Cumberland.DrawMap.exe -o=my.png -p=4326 \"path/to/shape.shp\",3087  ");
+			Console.WriteLine ("example: mono Cumberland.DrawMap.exe -o=my.png /path/to/map ");
 			Console.WriteLine ();
 	        Console.WriteLine ("Options:");
 	        p.WriteOptionDescriptions (Console.Out);
@@ -140,15 +133,5 @@ namespace Cumberland.DrawMap
 			                     Convert.ToDouble(coords[2]),
 			                     Convert.ToDouble(coords[3]));
 		}
-		
-		static string ParseProjection(string v)
-		{
-			int epsg;
-			if (int.TryParse(v, out epsg))
-			{
-				return "+init=epsg:" + v;
-			}
-			else return v;
-		}		
 	}
 }
